2005-08-30  Phil Edwards  <phil@codesourcery.com>

	* config.bfd (i[3-7]86-*-vxworks):  Match vxworks* instead.

2005-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1247
	* elfxx-ia64.c (allocate_fptr): Check undefined symbol.

2005-08-29  Steven J. Hill <sjhill@realitydiluted.com>

	* elfxx-mips.c (_bfd_mips_elf_relocate_section): Initialise
	'value' to avoid compile time warning message.

2005-08-26  Christian Groessler  <chris@groessler.org>

	* coff-z8k.c: (r_jr, r_disp7, r_callr): Fix src_mask and dst_mask
	of HOWTO.
	(coff_z8k_select_reloc): Remove.
	(SELECT_RELOC): Remove.
	(coff_z8k_reloc_type_lookup): New function.
	(coff_bfd_reloc_type_lookup): Define.
	* configure.in: Add cofflink.lo to z8kcoff_vec.
	* configure: Regenerate.
	* reloc.c: (bfd_reloc_code_type): Add z8k relocations.
	(bfd_install_relocation): Don't clear reloc_entry->addend for
	coff-z8k target.
	* bfd-in2.h: Regenerate.
	* libbfd.h: Regenerate.

2005-08-25  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* elf32-sh.c (sh_elf_get_flags_from_mach): Fix off-by-one error.

2005-08-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1208
	* elf-hppa.h (elf_hppa_relocate_section): Print out the name
	of unresolvable relocation.
	* elf-m10300.c (mn10300_elf_relocate_section): Likewise.
	* elf32-arm.c (elf32_arm_relocate_section): Likewise.
	* elf32-i386.c (elf_i386_relocate_section): Likewise.
	* elf32-m32r.c (m32r_elf_relocate_section): Likewise.
	* elf32-m68k.c (elf_m68k_relocate_section): Likewise.
	* elf32-s390.c (elf_s390_relocate_section): Likewise.
	* elf32-sh.c (sh_elf_relocate_section): Likewise.
	* elf32-xtensa.c (elf_xtensa_relocate_section): Likewise.
	* elf64-s390.c (elf_s390_relocate_section): Likewise.
	* elf64-sh64.c (sh_elf64_relocate_section): Likewise.
	* elf64-x86-64.c (elf64_x86_64_relocate_section): Likewise.
	* elfxx-sparc.c (_bfd_sparc_elf_relocate_section): Likewise.

2005-08-18  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config.bfd: Add bfd_elf32_shnbsd_vec and bfd_elf32_shlnbsd_vec